feat(core): introduce capability interfaces for the Potential hierarchy
  Add five opt-in interfaces to org.openmarkov.core.model.network.potential:
  - Projectable  — declares tableProject(EvidenceCase, InferenceOptions)
  - Reorderable  — declares reorder(List<Variable>)
  - Scalable     — declares scale(double), canonical name for scalePotential()
  - UncertaintyCarrier — declares getUncertainValues()/setUncertainValues()
                         with default isUncertain()
  - StrategyCarrier    — declares getStrategyTrees(), hasInterventions(),
                         hasInterventionForDecision(Variable)

  Implement the interfaces on concrete classes:
  - TablePotential: Projectable, Reorderable, Scalable
  - StrategicTablePotential: StrategyCarrier
  - UncertainTablePotential: UncertaintyCarrier
  - UniformPotential, DeltaPotential, ICIPotential,
    ConditionalGaussianPotential: Projectable
  - LinearCombinationPotential, DeltaPotential: Scalable

  scale() implementations delegate to the existing scalePotential() so both
  names coexist during the migration. No abstract methods are removed from
  Potential yet (opt-in / Step 1 of the redesign).