@@ -28,10 +28,10 @@ import java.util.Random;
 /**
  * Potential with discrete and/or continuous variables.
  *
- * @author marias
+ * @author Manuel Arias
  * @version 1.0
  */
-@PotentialType(names = "Uniform") public class UniformPotential extends Potential {
+@PotentialType(names = "Uniform") public class UniformPotential extends Potential implements Projectable {
     // Attributes
     /**
      * Value of a potential configuration when all the variables are discrete.
@@ -106,18 +106,16 @@ import java.util.Random;
     @Override
     public @NotNull TablePotential tableProject(EvidenceCase evidenceCase, InferenceOptions inferenceOptions, List<TablePotential> projectedPotentials) throws NonProjectablePotentialException.PotentialCannotBeConvertedToATable {
         switch (this.role) {
-            case LINK_RESTRICTION, UNSPECIFIED -> {
-                throw new NonProjectablePotentialException.PotentialCannotBeConvertedToATable(this);
-            }
+            case LINK_RESTRICTION, UNSPECIFIED -> throw new NonProjectablePotentialException.PotentialCannotBeConvertedToATable(this);
             case CONDITIONAL_PROBABILITY, JOINT_PROBABILITY, POLICY -> {
-                Variable conditionedVariable = variables.get(0);
+                Variable conditionedVariable = variables.getFirst();
                 boolean isNumeric = conditionedVariable.getVariableType() == VariableType.NUMERIC;
                 if (isNumeric) {
                     throw new NonProjectablePotentialException.PotentialCannotBeConvertedToATable(this);
                 }
                 if (evidenceCase != null && evidenceCase.contains(conditionedVariable)) {
                     // returns a constant
-                    TablePotential projectedPotential = new TablePotential(new ArrayList<Variable>(), role);
+                    TablePotential projectedPotential = new TablePotential(new ArrayList<>(), role);
                     projectedPotential.values[0] = 1.0 / conditionedVariable.getNumStates();
                     return projectedPotential;
                 }
@@ -191,11 +189,11 @@ import java.util.Random;
     }
     
     @Override public int sampleConditionedVariable(Random randomGenerator, Map<Variable, Integer> parentStateIndexes) {
-        return randomGenerator.nextInt(variables.get(0).getNumStates());
+        return randomGenerator.nextInt(variables.getFirst().getNumStates());
     }
     
     @Override public double getProbability(HashMap<Variable, Integer> sampledStateIndexes) {
-        return 1.0 / variables.get(0).getNumStates();
+        return 1.0 / variables.getFirst().getNumStates();
     }
     
     @Override public boolean isUncertain() {
